--- a/style.css
+++ b/style.css
@@ -1,18 +1,8 @@
 * {
   margin: 0;
   padding: 0;
-}
-:root {
-  --FUNDO: #6A7495;
-  
-  --PADRAO: #324650;
-  --NUVEM: #757F96;
-  --GELO: #89A7F5;
-  --LAVA: #D84801;
-  --TRAMPOLIM: #6D4E94;
-  --CHOCOLATE: #2E190C;
-  --AGUA: #648ea381;
-  --TEIA: #9BAABC;
+  box-sizing: border-box;
+  font-family: sans-serif;
 }
 html, body {
   width: 100vw;
@@ -29,15 +19,148 @@ main {
   display: flex;
   flex-flow: column nowrap;
 }
-svg {
-  margin: 0;
-  padding: 0;
+rect {
+  transition: 200ms;
+}
+rect:hover {
+  opacity: 0;
 }
 .s {
-  color: white;
+  color: #f7efecf5;
   width: 800px;
   height: 200px;
   background-color: #503528;
+  box-shadow: inset 0 -20px 80px -25px #351a01c8;
   margin: 0;
-  border-radius: 2px;
+}
+
+.btns-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+.btn {
+  display: block;
+  padding: 4px;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+  user-select: none;
+  transition: 150ms;
+}
+.btn:hover {
+  transform: scale(1.09);
+}
+.btn img {
+  width: 100%;
+  height: 100%;
+}
+#show-settings {
+  display: none;
+}
+#save-btn {
+  display: none;
+}
+
+#map-settings {
+  background-color: #503528;
+  position: absolute;
+  width: 636px;
+  padding: 10px;
+  top: calc(50vh - ((255px / 2) + 100px));
+  left: calc(50vw - 636px / 2);
+  height: 275px;
+
+  box-shadow: inset 0 0 80px -25px #351a01c8;
+  display: none;
+  flex-flow: column nowrap;
+  align-items: space-between;
+  gap: 6px;
+}
+#show-settings:checked + #map-settings{
+  display: flex;
+}
+
+
+.types-container {
+  width: 616px;
+  height: 155px;
+  display: flex;
+  flex-flow: row wrap;
+  gap: 4px;
+}
+.types-container input {
+  display: none;
+}
+.types-container input + label{
+  padding: 6px;
+  cursor: pointer;
+  background-color: #237623;
+  user-select: none;
+
+  border-radius: 1px;
+  box-shadow: inset 0 0 40px -25px #00000064;
+
+  width: 120px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.types-container input:checked + label{
+  background-color: #757070;
+}
+.types-container input + label:hover {
+  opacity: .95;
+}
+.types-container input:checked + label.disabled,
+.types-container input + label.disabled
+ {
+  opacity: .4;
+  background-color: #757070;
+  cursor: default;
+}
+.grounds-no-container {
+  padding: 6px;
+  border-radius: 3px;
+  text-transform: uppercase;
+}
+.grounds-no-container input {
+  font-size: 1.3rem;
+  padding: 4px;
+  outline: none;
+  cursor: pointer;
+}
+.steps-line {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 8px;
+  font-size: 7px;
+  margin: -4px 0 4px 0;
+}
+.steps-number {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 2px 0 6px;
+  font-size: 12px;
+}
+.steps-number span:nth-last-child(6),
+.steps-number span:nth-last-child(5) {
+  transform: translateX(2px);
+}
+.steps-number span:nth-last-child(4),
+.steps-number span:nth-last-child(3) {
+  transform: translateX(3px);
+}
+.steps-number span:nth-last-child(2) {
+  transform: translateX(4px);
+}
+#btns-on-settings {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 100px;
 }
