--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: sans-serif;
+  user-select: none;
 }
 html, body {
   width: 100vw;
@@ -19,6 +20,10 @@ main {
   display: flex;
   flex-flow: column nowrap;
 }
+svg {
+  border-left: 1px solid #0110181b;
+  border-right: 1px solid #0110181b;
+}
 rect {
   transition: 200ms;
 }
@@ -29,14 +34,14 @@ rect:hover {
   color: #f7efecf5;
   width: 800px;
   height: 200px;
-  background-color: #503528;
-  box-shadow: inset 0 -20px 80px -25px #351a01c8;
+  background-color: #324650;
+  box-shadow: inset 0 -160px 220px -250px #0000009d;
   margin: 0;
 }
 
 .btns-container {
   width: 100%;
-  height: 100%;
+  height: 200px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -48,7 +53,6 @@ rect:hover {
   width: 40px;
   height: 40px;
   cursor: pointer;
-  user-select: none;
   transition: 150ms;
 }
 .btn:hover {
@@ -66,7 +70,7 @@ rect:hover {
 }
 
 #map-settings {
-  background-color: #503528;
+  background-color: #324650;
   position: absolute;
   width: 636px;
   padding: 10px;
@@ -74,7 +78,7 @@ rect:hover {
   left: calc(50vw - 636px / 2);
   height: 275px;
 
-  box-shadow: inset 0 0 80px -25px #351a01c8;
+  box-shadow: inset 0 260px 260px -250px #0000006a;
   display: none;
   flex-flow: column nowrap;
   align-items: space-between;
@@ -98,8 +102,7 @@ rect:hover {
 .types-container input + label{
   padding: 6px;
   cursor: pointer;
-  background-color: #237623;
-  user-select: none;
+  background-color: #326632;
 
   border-radius: 1px;
   box-shadow: inset 0 0 40px -25px #00000064;
@@ -111,17 +114,23 @@ rect:hover {
   align-items: center;
 }
 .types-container input:checked + label{
-  background-color: #757070;
+  background-color: #6c6666;
 }
 .types-container input + label:hover {
-  opacity: .95;
+  opacity: .88;
 }
-.types-container input:checked + label.disabled,
-.types-container input + label.disabled
+.types-container input:checked + label.disable,
+.types-container input + label.disable
  {
-  opacity: .4;
-  background-color: #757070;
+  background-color: #6c6666;
+  opacity: .5;
   cursor: default;
+}
+#btns-on-settings {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 100px;
 }
 .grounds-no-container {
   padding: 6px;
@@ -134,33 +143,21 @@ rect:hover {
   outline: none;
   cursor: pointer;
 }
-.steps-line {
+.steps-line, .steps-number {
   display: flex;
   justify-content: space-between;
-  padding: 0 8px;
+  padding: 0 10px;
   font-size: 7px;
-  margin: -4px 0 4px 0;
+  margin-top: -6px;
+  color: #f7efecf5;
 }
 .steps-number {
+  font-size: 14px;
+  color: #c2a608;
+  margin-top: 4px;
+}
+.steps-line span, .steps-number span {
+  width: 0px;
   display: flex;
-  justify-content: space-between;
-  padding: 0 2px 0 6px;
-  font-size: 12px;
-}
-.steps-number span:nth-last-child(6),
-.steps-number span:nth-last-child(5) {
-  transform: translateX(2px);
-}
-.steps-number span:nth-last-child(4),
-.steps-number span:nth-last-child(3) {
-  transform: translateX(3px);
-}
-.steps-number span:nth-last-child(2) {
-  transform: translateX(4px);
-}
-#btns-on-settings {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  height: 100px;
+  justify-content: center;
 }
