--- a/style.css
+++ b/style.css
@@ -21,7 +21,11 @@ main {
   flex-flow: column nowrap;
 }
 .map-container {
-  border: 1px solid #4e5775;
+  border: 1px solid #00AADD;
+}
+rect {
+  transform-box: fill-box;
+  transform-origin: center;
 }
 
 .s {
@@ -29,6 +33,7 @@ main {
   width: 800px;
   height: 200px;
   background-color: #324650;
+  border-radius: 10px;;
   box-shadow: inset 0 -160px 220px -250px #0000009d;
   margin: 0;
 }
@@ -155,6 +160,14 @@ main {
   display: flex;
   justify-content: center;
 }
+.display-xml {
+  user-select: text;
+  position: absolute;
+  top: calc(50vh + 300px);
+  left: calc(50vw - 400px);
+  width: 800px;
+}
+
 .disclaimer {
   display: none;
 }
